--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 # dependencies
 /caretaker/node_modules
 /backend/node_modules
+/backend/.env
 /fit-band-server/node_modules
 
 /.pnp
@@ -15,6 +16,7 @@
 # next.js
 /caretaker/.next/
 /caretaker/out/
+/caretaker/.env
 
 # production
 /build
