--- a/caretaker/package.json
+++ b/caretaker/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@hookform/resolvers": "^3.3.4",
+    "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
     "@radix-ui/react-avatar": "^1.0.4",
@@ -34,6 +35,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.51.2",
     "react-hot-toast": "^2.4.1",
+    "react-use-localstorage": "^3.5.3",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^6.7.0",
